--- a/gb/20/2/8/n11853763.md
+++ b/gb/20/2/8/n11853763.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kmtpx253/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kmtpx253/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nuje2873/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵演出牵动心灵 会计师夫妇感动赞叹</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002080217551886-600x400.jpg" />
 <h6>2020年2月7日晚，会计师Karen Helms和丈夫James Helms观看了神韵环球艺术团在弗雷斯诺威廉萨洛扬剧院的演出。（周容／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年02月08日讯】（大纪元记者周容美国弗雷斯诺报导）2月7日晚，会计师Karen Helms和丈夫James Helms为了庆祝一个纪念日，一起到弗雷斯诺威廉萨洛扬剧院（FRESNO William Saroyan Theatre）观看<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团的演出。</p>
-<p><a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>绚丽夺目的色彩、精彩纷呈的舞台效果、宛如天籁的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>，让观众乐在其中，又深深感动，Helms夫妇也是如此。Helms先生说，“演出很棒，呈现了很多顶级的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>节目，美不胜收。”</p>
-<p>Helms太太则表示，“演出美不胜收，精彩纷呈。每个节目和<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>、<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>都牵动我们的情感，让我们融入其中。”</p>
+	<p>【大纪元2020年02月08日讯】（大纪元记者周容美国弗雷斯诺报导）2月7日晚，会计师Karen Helms和丈夫James Helms为了庆祝一个纪念日，一起到弗雷斯诺威廉萨洛扬剧院（FRESNO William Saroyan Theatre）观看<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团的演出。</p>
+<p><ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>绚丽夺目的色彩、精彩纷呈的舞台效果、宛如天籁的<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>，让观众乐在其中，又深深感动，Helms夫妇也是如此。Helms先生说，“演出很棒，呈现了很多顶级的<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>节目，美不胜收。”</p>
+<p>Helms太太则表示，“演出美不胜收，精彩纷呈。每个节目和<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>、<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>都牵动我们的情感，让我们融入其中。”</p>
 <p>“舞蹈演员的技巧非常高超，他们可以做出不可思议的舞蹈动作，太美了！”她接着说，“我们最喜欢那个水袖舞，还有蒙古舞蹈，以及演出开篇打鼓的舞蹈，都非常棒。”</p>
 <p>神韵传递的是传统文化，开篇讲述的故事就是创始主带领众神下凡，开创五千年中华文明历史，对此Helms太太说，“这个节目流畅又简洁，但是让人深思，我现在心中五味杂陈，需要时间来思考（节目所传递的内涵）。”</p>
 <p>演出中的神性内涵也让Helms太太感动，“我很赞赏神韵表达的神性信息，我需要对这种精深的正统道德价值进行思考，整台演出牵动我内心的许多不同的情感。”</p>
@@ -18,40 +18,40 @@
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/8/n11853763.htm">神韵演出牵动心灵 会计师夫妇感动赞叹</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11809578.htm">青年专刊《洄?苗》 展现苗栗青年“菁”实力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/18/n11802857.htm">苗栗县学习型城市    终身学习成果展</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779442.htm">鼠兆丰年庆吉祥 新春挥毫捐发票换春联</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779005.htm">“鼠兆丰年庆吉祥” 2020年新春挥毫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/1/n11760027.htm">元旦升旗典礼 苗栗县长：稳健踏实 幸福永续</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/30/n11754519.htm">肌少症预防宣导    我运动、我健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/20/n11668192.htm">全国中小学客家艺文竞赛 苗栗县大放异彩</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/10/22/n11604496.htm">无龄世代 青银共生 苗栗青年洄游成果发表</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853273.htm">深圳突“封城”大批民众涌入香港</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854174.htm">英名校教授：中国日增5万例新冠病例</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851958.htm">【拍案惊奇】李文亮死后被抢救 武汉方舱真相</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849608.htm">【新闻看点】四大疑点 武汉病毒所卷入风暴眼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852119.htm">【老外看香港】武汉肺炎 香港危急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849344.htm">吴宗宪捐300多台吸尘器 助武汉疫区医院</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11848061.htm">美国老牌影星寇克道格拉斯辞世 享嵩寿103岁</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/4/n11843192.md#1">【预告】新唐人元宵节再播出神韵晚会</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/7/n11850437.md#1">费城上演20场神韵 各级官员褒奖 民众期盼</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/7/n11851155.md#1">神韵展现“共同信仰创世主”夏洛特精英感谢</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/7/n11851250.md#1">“另一境界的舞蹈技巧”舞蹈家受神韵启发</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/7/n11851484.md#1">神韵演出华美大气 室内设计师：绝对会推荐</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/7/n11851503.md#1">神韵传递中华传统文化 手术中心老板着迷</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kmtpx253/djy/blob/master/gb/20/2/8/n11853763.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10172889.md#1" target="_blank">袁斌：中共抓壮丁连老弱小孩也不放过</a></li><li><a href="https://github.com/nuje2873/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212964.md#1">【内幕】王岐山汪洋与美方交手 铩羽而归</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12211217.md#1">【现场视频】湖北680座水库超汛限 房屋被淹</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213782.md#1">日籍染疫学生接触者全阴性 庄人祥：有2种可能</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212175.md#1">中印边境冲突 军二代称中方2死3伤</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12210389.md#1">李英爱晒9岁龙凤胎近照 厨艺获网友夸赞</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12210154.md#1">术后袁惟仁52岁生日 儿子隔空祝寿惹人洒泪</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212204.md#1">周星驰对赌失败 抵押11亿豪宅周转资金</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209963.md#1">“火箭少女”解散 杨超越火速修改微博认证</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212762.md#1">开工巧遇周润发 邝洁楹激动到合照不知望镜头</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/14/n12183964.md#1">【文史】古籍中多姿多彩的端午节粽</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131668.md#1">【康熙大帝】鳌拜犯上 君臣交锋</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209159.md#1">端午：纯阳正气辟阴邪</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12204829.md#1">【佳人传】一门皆风雅 沈宜修的诗意桃源</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nuje2873/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nuje2873/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/8/n11853763.htm">神韵演出牵动心灵 会计师夫妇感动赞叹</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853763.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
